espaçamento de slide

--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -21,7 +21,7 @@
 }
 
 #page-contato .hero-body .columns .column:not(.color-group) {
-	background-color: rgba(29, 105, 149, .9);
+	background-color: rgba(53,82,115,0.9);
 	padding: 2rem;
 	margin-bottom: 0;
 }
