--- a/assets/css/perfil-medico.css
+++ b/assets/css/perfil-medico.css
@@ -28,3 +28,32 @@
 .single-perfil_medico main .section .columns .column .profile-pic img {
   border-radius: 100%;
 }
+
+.single-perfil_medico .hero-body a {
+  font-weight: bold;
+}
+
+.single-perfil_medico .hero-body {
+  background-image: url(../images/IV_SITE_CORPO_CLINICO.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.single-perfil_medico .hero-body h2.title {
+  font-family: 'MuseoLight', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: .3rem;
+  margin-bottom: 4.5rem;
+  font-weight: initial;
+  font-size: 3rem;
+}
+
+.single-perfil_medico .hero-body h1.title {
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.single-perfil_medico .hero-body .title, p, a {
+  color: white;
+}
