cores aplicadas em lista

--- a/assets/css/perfil-medico.css
+++ b/assets/css/perfil-medico.css
@@ -54,6 +54,6 @@
   margin-bottom: 0;
 }
 
-.single-perfil_medico .hero-body .title, p, a {
+.single-perfil_medico .hero-body .title, p, a, ul li {
   color: white;
 }
